Changes for Filter Effects specification
----------------------------------------

2013-09-26  Dirk Schulze  <dschulze@adobe.com>
- First attempt to write the security section. This sections is currently work in progress.

2013-09-06  Dirk Schulze  <dschulze@adobe.com>
- Allow <string> in CSS image filter() function to match behavior on other CSS Images.

2013-08-31  Dirk Schulze  <dschulze@adobe.com>
- Added edgeMode attribute to feGaussianBlur
- Specify that edgeMode computes to 'none' for 'filter' property
  and 'duplicate' for filter() CSS Image function.

2013-08-26  Dirk Schulze  <dschulze@adobe.com>
- Replace SVGAnimatedColor with SVGAnimatedString.

2013-08-26  Dirk Schulze  <dschulze@adobe.com>
- Added clarification for 'color-interpolation-filters' property.

2013-08-26  Dirk Schulze  <dschulze@adobe.com>
- Added more issues to the spec.

2013-08-25  Dirk Schulze  <dschulze@adobe.com>
- Added more issues to the spec.

2013-08-23  Dirk Schulze  <dschulze@adobe.com>
- Clean-up.

2013-08-22  Dirk Schulze  <dschulze@adobe.com>
- Clean-up. Remove hint about performance increase because of security concerns.

2013-08-17  Dirk Schulze  <dschulze@adobe.com>
- Specify filter() image function and interpolation.

2013-08-14  Dirk Schulze  <dschulze@adobe.com>
- Clarify interpolation behavior more.

2013-08-13  Dirk Schulze  <dschulze@adobe.com>
- Fix initial values for interpolation on grayscale, invert and sepia.

2013-08-05  Dirk Schulze  <dschulze@adobe.com>
- Clarify lacuna values for filter shorthands.
- Fix a bug with drop-shadow syntax.

2013-07-16  Dirk Schulze  <dschulze@adobe.com>
- Be more explicit on parsing instructions for filter functions.

2013-07-14  Dirk Schulze  <dschulze@adobe.com>
- Explicitly state allowed ranges and lacuna values for filter functions.

2013-07-09  Dirk Schulze  <dschulze@adobe.com>
- Just support one shadow item for drop-shadow in the first level.

2013-07-04  Dirk Schulze  <dschulze@adobe.com>