@@ -2,6 +2,9 @@ Changes for Filter Effects specification
 ----------------------------------------
 
 2013-09-26  Dirk Schulze  <dschulze@adobe.com>
+- Added validation guidance for custom shaders and extended security module.
+
+2013-09-26  Dirk Schulze  <dschulze@adobe.com>
 - First attempt to write the security section. This sections is currently work in progress.
 
 2013-09-06  Dirk Schulze  <dschulze@adobe.com>
